--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "file descriptor promises",
   "main": "lib/index.js",
   "scripts": {
-    "test": "tape test/test.js | tap-spec"
+    "test": "tape test/test.js | tap-spec",
+    "coverage": "istanbul cover test/test.js"
   },
   "repository": {
     "type": "git",
@@ -15,10 +16,14 @@
     "file",
     "descriptor",
     "fd",
+    "file system",
     "file",
-    "system",
-    "file",
-    "fs"
+    "fs",
+    "remove",
+    "delete",
+    "write",
+    "read",
+    "create"
   ],
   "author": "Enrique Erne",
   "license": "MIT",
@@ -27,10 +32,13 @@
   },
   "homepage": "https://github.com/thisconnect/fildes#readme",
   "dependencies": {
+    "cpy": "^3.4.1",
+    "graceful-fs": "^4.1.2",
     "mkdirp": "^0.5.1",
     "rimraf": "^2.4.3"
   },
   "devDependencies": {
+    "istanbul": "^0.3.22",
     "tap-spec": "^4.1.0",
     "tape": "^4.2.1"
   }
