--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "homepage": "https://github.com/thisconnect/fildes#readme",
   "dependencies": {
     "cpy": "^3.4.1",
+    "debug": "^2.2.0",
     "mkdirp": "^0.5.1",
     "rimraf": "^2.4.3"
   },
@@ -41,6 +42,6 @@
     "coveralls": "^2.11.4",
     "istanbul": "^0.3.22",
     "tap-spec": "^4.1.0",
-    "tape": "^4.2.1"
+    "tape": "^4.2.2"
   }
 }
