--- a/package.json
+++ b/package.json
@@ -37,14 +37,13 @@
   },
   "homepage": "https://github.com/thisconnect/fildes#readme",
   "dependencies": {
-    "cpy": "^3.4.1",
     "debug": "^2.2.0",
-    "mkdirp": "^0.5.1",
-    "rimraf": "^2.4.4"
+    "mkdirp": "^0.5.1"
   },
   "devDependencies": {
     "coveralls": "^2.11.4",
     "istanbul": "^0.4.0",
+    "rimraf": "^2.4.4",
     "tap-spec": "^4.1.0",
     "tape": "^4.2.2"
   }
