--- a/package.json
+++ b/package.json
@@ -15,13 +15,11 @@
   },
   "keywords": [
     "promise",
+    "fildes",
     "file",
-    "descriptor",
     "fd",
     "filesystem",
     "mkdir",
-    "cp",
-    "file",
     "fs",
     "rm",
     "remove",
