--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,21 @@
 {
-    "rules": {
-        "semi": 2,
-        "quotes": [2, "single"]
-    },
-    "node": true
+  "parserOptions": {
+    "ecmaVersion": 6
+  },
+  "extends": ["eslint:recommended"],
+  "rules": {
+    "comma-dangle": ["warn", "never"],
+    "indent": ["warn", 2, { "SwitchCase": 1 }],
+    "linebreak-style": ["warn", "unix"],
+    "no-console": "off",
+    "quotes": ["warn", "single", { "allowTemplateLiterals": true }],
+    "semi": ["warn", "always"]
+  },
+  "env": {
+    "node": true,
+    "es6": true
+  },
+  "plugins": [
+    "promise"
+  ]
 }
