--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "test": "tape test/test.js | tap-spec",
     "test-length": "tape test/test-functions.js | tap-spec",
-    "coverage": "istanbul cover test/test.js",
-    "coveralls": "istanbul cover test/test.js --report lcovonly && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage",
-    "codecov": "istanbul cover test/test.js && codecov",
+    "coverage": "istanbul cover test/test.js --report lcovonly",
+    "codecov": "npm run coverage && codecov",
     "prettier": "prettier-eslint --write \"{lib,test}/*.js\"",
     "lint": "eslint .",
     "lint-check": "eslint --print-config .eslintrc | eslint-config-prettier-check"
@@ -46,12 +45,10 @@
   },
   "devDependencies": {
     "codecov": "^2.2.0",
-    "coveralls": "^2.11.16",
     "eslint": "^3.19.0",
     "eslint-config-prettier": "^2.1.1",
     "eslint-plugin-prettier": "^2.1.1",
     "eslint-plugin-promise": "^3.5.0",
-    "faucet": "0.0.1",
     "istanbul": "^0.4.5",
     "prettier": "^1.3.1",
     "prettier-eslint-cli": "^3.6.1",
