--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "scripts": {
     "test": "tape test/test.js | tap-spec",
     "test-length": "tape test/test-functions.js | tap-spec",
-    "coverage": "istanbul cover test/test.js | tap-spec",
-    "coveralls": "istanbul cover test/test.js --report lcovonly && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage"
+    "coverage": "istanbul cover test/test.js --report lcovonly",
+    "codecov": "npm run coverage && codecov",
+    "prettier": "prettier-eslint --write \"{lib,test}/*.js\"",
+    "lint": "eslint .",
+    "lint-check": "eslint --print-config .eslintrc | eslint-config-prettier-check"
   },
   "repository": {
     "type": "git",
@@ -41,8 +44,14 @@
     "mkdirp": "^0.5.1"
   },
   "devDependencies": {
-    "coveralls": "^2.11.16",
+    "codecov": "^2.2.0",
+    "eslint": "^3.19.0",
+    "eslint-config-prettier": "^2.1.1",
+    "eslint-plugin-prettier": "^2.1.1",
+    "eslint-plugin-promise": "^3.5.0",
     "istanbul": "^0.4.5",
+    "prettier": "^1.3.1",
+    "prettier-eslint-cli": "^3.6.1",
     "rimraf": "^2.5.4",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.3"
