--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "promises fs and takes care about fs.open",
   "main": "lib/main.js",
   "scripts": {
-    "test": "tape test/test.js | tap-spec",
-    "posttest": "npm run lint",
+    "test": "tape test/test.js | tap-difflet",
     "test-length": "tape test/test-functions.js | tap-spec",
-    "coverage": "istanbul cover test/test.js --report lcovonly",
+    "coverage": "nyc tape test/test.js",
     "codecov": "npm run coverage && codecov",
     "prettier": "prettier-eslint --write \"{lib,test}/*.js\"",
     "lint": "eslint .",
-    "lint-check": "eslint --print-config .eslintrc | eslint-config-prettier-check"
+    "lint-check": "eslint --print-config .eslintrc | eslint-config-prettier-check",
+    "ci": "npm run codecov && npm run lint"
   },
   "repository": {
     "type": "git",
@@ -50,11 +50,11 @@
     "eslint-config-prettier": "^2.1.1",
     "eslint-plugin-prettier": "^2.1.1",
     "eslint-plugin-promise": "^3.5.0",
-    "istanbul": "^0.4.5",
+    "nyc": "^10.3.2",
     "prettier": "^1.3.1",
     "prettier-eslint-cli": "^3.6.1",
     "rimraf": "^2.5.4",
-    "tap-spec": "^4.1.1",
+    "tap-difflet": "^0.7.0",
     "tape": "^4.6.3"
   }
 }
