--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: false
 language: node_js
 node_js:
   - '6'
@@ -6,4 +5,11 @@ node_js:
 os:
   - linux
   - osx
-after_success: npm run codecov
+sudo: false
+cache:
+  directories:
+    - node_modules
+install:
+  - npm install
+script:
+  - npm run ci
