--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,6 +16,7 @@ install:
 test_script:
   - node --version
   - npm --version
-  - npm run ci
+  - npm run coverage
+  - npm run lint
 
 build: off
