--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,6 +1,5 @@
 environment:
   matrix:
-    - nodejs_version: "4"
     - nodejs_version: "6"
     - nodejs_version: "7"
 
@@ -17,6 +16,7 @@ install:
 test_script:
   - node --version
   - npm --version
-  - npm test
+  - npm run coverage
+  - npm run lint
 
 build: off
