--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,16 @@
-sudo: false
 language: node_js
 node_js:
-  - '4'
   - '6'
   - 'stable'
 os:
   - linux
   - osx
-after_success: npm run codecov
+sudo: false
+cache:
+  directories:
+    - node_modules
+install:
+  - npm install
+script:
+  - npm run codecov
+  - npm run lint
