--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "tape test/test.js | tap-difflet",
     "test-length": "tape test/test-functions.js | tap-spec",
-    "coverage": "nyc tape test/test.js",
+    "coverage": "nyc --reporter=lcov --reporter=text tape test/test.js",
     "codecov": "npm run coverage && codecov",
     "prettier": "prettier-eslint --write \"{lib,test}/*.js\"",
     "lint": "eslint .",
@@ -40,7 +40,7 @@
   },
   "homepage": "https://github.com/thisconnect/fildes#readme",
   "dependencies": {
-    "mkdirp": "^0.5.1"
+    "make-dir": "^1.0.0"
   },
   "devDependencies": {
     "codecov": "^2.2.0",
