--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "fildes",
-  "version": "1.0.5",
+  "version": "2.0.0-develop",
   "description": "promises fs and takes care about fs.open",
   "main": "lib/main.js",
   "scripts": {
-    "test": "tape test/test.js | tap-difflet",
-    "coverage": "nyc --reporter=lcov --reporter=text tape test/test.js",
+    "pretest": "npm run clean",
+    "precoverage": "npm run clean",
+    "clean": "rimraf ./test/data",
+    "test": "tape test/*.test.js | tap-difflet",
+    "coverage": "nyc --reporter=lcov --reporter=text tape test/*.test.js",
     "codecov": "npm run coverage && codecov",
     "prettier": "prettier-eslint --write \"{lib,test}/*.js\"",
     "lint": "eslint .",
