--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "fildes",
-  "version": "1.0.5",
+  "version": "2.0.0-develop",
   "description": "promises fs and takes care about fs.open",
   "main": "lib/main.js",
   "scripts": {
-    "test": "tape test/test.js | tap-difflet",
-    "coverage": "nyc --reporter=lcov --reporter=text tape test/test.js",
+    "pretest": "npm run clean",
+    "precoverage": "npm run clean",
+    "clean": "rimraf ./test/data",
+    "test": "tape lib/**/test.js | tap-difflet",
+    "testOLD": "tape test/*.test.js | tap-difflet",
+    "coverage": "nyc --reporter=lcov --reporter=text tape test/*.test.js",
     "codecov": "npm run coverage && codecov",
-    "prettier": "prettier-eslint --write \"{lib,test}/*.js\"",
+    "prettier": "prettier-eslint --write \"{lib,test}/**/*.js\"",
     "lint": "eslint .",
     "lint-check": "eslint --print-config .eslintrc | eslint-config-prettier-check"
   },
@@ -48,7 +52,7 @@
     "eslint-plugin-prettier": "^2.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "nyc": "^11.0.2",
-    "prettier": "^1.3.1",
+    "prettier": "^1.4.1",
     "prettier-eslint-cli": "^4.0.2",
     "rimraf": "^2.5.4",
     "tap-difflet": "^0.7.0",
