--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "testOLD": "tape test/*.test.js | tap-difflet",
     "coverage": "nyc --reporter=lcov --reporter=text tape test/*.test.js",
     "codecov": "npm run coverage && codecov",
-    "prettier": "prettier-eslint --write \"{lib,test}/**/*.js\"",
+    "prettier": "prettier-eslint --write \"{lib,test,examples}/**/*.js\"",
     "lint": "eslint .",
     "lint-check": "eslint --print-config .eslintrc | eslint-config-prettier-check"
   },
