--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "precoverage": "npm run clean",
     "clean": "rimraf ./test/data",
     "test": "tape lib/**/test.js | tap-difflet",
-    "testOLD": "tape test/*.test.js | tap-difflet",
-    "coverage": "nyc --reporter=lcov --reporter=text tape test/*.test.js",
+    "coverage": "nyc --reporter=lcov --reporter=text tape lib/**/test.js",
     "codecov": "npm run coverage && codecov",
     "prettier": "prettier-eslint --write \"{lib,test,examples}/**/*.js\"",
     "lint": "eslint .",
