semi and console

--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
     "prettier/prettier": ["error", {
       "singleQuote": true
     }],
+    "no-console": "warn",
     "no-mixed-operators": "warn"
   },
   "env": {
