--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,14 @@
 version: 2.0
 
 jobs:
-  "node-10":
+  "node-14":
     docker:
-      - image: circleci/node:10
+      - image: circleci/node:14
     steps:
       - checkout
       - run: node --version
       - run: npm --version
-      - run: npm install
+      - run: npm ci
       - run:
           name: Run tests
           command: npm test
@@ -19,7 +19,7 @@ jobs:
       - checkout
       - run: node --version
       - run: npm --version
-      - run: npm install
+      - run: npm ci
       - run:
           name: Run tests
           command: npm test
@@ -27,5 +27,5 @@ workflows:
   version: 2
   build:
     jobs:
-      - "node-10"
+      - "node-14"
       - "node-12"
