--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - '10'
+  - '14'
   - '12'
 os:
   - linux
@@ -10,7 +10,7 @@ cache:
   directories:
     - node_modules
 install:
-  - npm install
+  - npm ci
 script:
   - npm run codecov
   - npm run lint
